// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background color is orange-400 1`] = `
.c1 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #D73F09;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Orange Background link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-right-long c1"
      color="#D73F09"
      data-icon="arrow-right-long"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M363.3 100.7l144 144C510.4 247.8 512 251.9 512 255.1s-1.562 8.188-4.688 11.31l-144 144c-6.25 6.25-16.38 6.25-22.62 0s-6.25-16.38 0-22.62l116.7-116.7H16c-8.844 0-16-7.156-16-15.1c0-8.844 7.156-16 16-16h441.4l-116.7-116.7c-6.25-6.25-6.25-16.38 0-22.62S357.1 94.44 363.3 100.7z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Background is orange-400, and text is white 1`] = `
.c1 {
  color: #ffffff;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #D73F09;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Orange Background with White text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-right-long c1"
      color="#ffffff"
      data-icon="arrow-right-long"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M363.3 100.7l144 144C510.4 247.8 512 251.9 512 255.1s-1.562 8.188-4.688 11.31l-144 144c-6.25 6.25-16.38 6.25-22.62 0s-6.25-16.38 0-22.62l116.7-116.7H16c-8.844 0-16-7.156-16-15.1c0-8.844 7.156-16 16-16h441.4l-116.7-116.7c-6.25-6.25-6.25-16.38 0-22.62S357.1 94.44 363.3 100.7z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Basic SimpleModalLink test 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 0;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
  >
    Simple Modal Link
  </a>
</div>
`;

exports[`Default options 1`] = `
.c1 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Default link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-right-long c1"
      color="#D73F09"
      data-icon="arrow-right-long"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M363.3 100.7l144 144C510.4 247.8 512 251.9 512 255.1s-1.562 8.188-4.688 11.31l-144 144c-6.25 6.25-16.38 6.25-22.62 0s-6.25-16.38 0-22.62l116.7-116.7H16c-8.844 0-16-7.156-16-15.1c0-8.844 7.156-16 16-16h441.4l-116.7-116.7c-6.25-6.25-6.25-16.38 0-22.62S357.1 94.44 363.3 100.7z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Highlighted text is orange 1`] = `
.c2 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

.c1 {
  padding: 0;
  font-weight: 600;
  font-size: 24px;
}

<div>
  <a
    class="c0 c1"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Highlighted external link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-up-right-from-square c2"
      color="#D73F09"
      data-icon="arrow-up-right-from-square"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M272 64C263.2 64 256 56.84 256 48C256 39.16 263.2 32 272 32H432C440.8 32 448 39.16 448 48V208C448 216.8 440.8 224 432 224C423.2 224 416 216.8 416 208V86.63L187.3 315.3C181.1 321.6 170.9 321.6 164.7 315.3C158.4 309.1 158.4 298.9 164.7 292.7L393.4 64H272zM0 112C0 85.49 21.49 64 48 64H176C184.8 64 192 71.16 192 80C192 88.84 184.8 96 176 96H48C39.16 96 32 103.2 32 112V432C32 440.8 39.16 448 48 448H368C376.8 448 384 440.8 384 432V304C384 295.2 391.2 288 400 288C408.8 288 416 295.2 416 304V432C416 458.5 394.5 480 368 480H48C21.49 480 0 458.5 0 432V112z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`InternalLink background is orange-400 and text is white 1`] = `
.c1 {
  color: #ffffff;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #D73F09;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    bg="#D73F09"
    class="c0"
    fg="#ffffff"
    href="/https://oregonstate.edu"
  >
    Orange Background with White text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-right-long c1"
      color="#ffffff"
      data-icon="arrow-right-long"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M363.3 100.7l144 144C510.4 247.8 512 251.9 512 255.1s-1.562 8.188-4.688 11.31l-144 144c-6.25 6.25-16.38 6.25-22.62 0s-6.25-16.38 0-22.62l116.7-116.7H16c-8.844 0-16-7.156-16-15.1c0-8.844 7.156-16 16-16h441.4l-116.7-116.7c-6.25-6.25-6.25-16.38 0-22.62S357.1 94.44 363.3 100.7z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Test SimpleInternalLink props are passed down 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 0;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="/https://oregonstate.edu"
    padding="0"
  >
    Simple Internal Link Sample
  </a>
</div>
`;

exports[`Text color is pine-400 1`] = `
.c1 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #4A773C;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Green Text link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-right-long c1"
      color="#D73F09"
      data-icon="arrow-right-long"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M363.3 100.7l144 144C510.4 247.8 512 251.9 512 255.1s-1.562 8.188-4.688 11.31l-144 144c-6.25 6.25-16.38 6.25-22.62 0s-6.25-16.38 0-22.62l116.7-116.7H16c-8.844 0-16-7.156-16-15.1c0-8.844 7.156-16 16-16h441.4l-116.7-116.7c-6.25-6.25-6.25-16.38 0-22.62S357.1 94.44 363.3 100.7z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;
